[package]
name = "unbound-mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcar = { version = "0.2.5", optional = true }
ctor = { version = "0.2.8", optional = true }
filetime = { version = "0.2.24", optional = true }
ipnet = { version = "2.9.0", features = ["serde"], optional = true }
iptrie = { version = "0.8.5", optional = true }
libc = { version = "0.2.155", optional = true }
mnl = { version = "0.2.2", features = ["mnl-1-0-4"], optional = true }
nftnl = { version = "0.6.2", features = ["nftnl-1-1-2"], optional = true }
nix = { version = "0.29.0", features = ["poll", "user"], optional = true }
radix_trie = { version = "0.2.1", optional = true }
serde = { version = "1.0.205", features = ["derive"], optional = true }
serde_json = { version = "1.0.122", optional = true }
smallvec = { version = "1.13.2", optional = true }

[features]
example = [
	"boxcar",
	"ctor",
	"filetime",
	"ipnet",
	"iptrie",
	"libc",
	"mnl",
	"nftnl",
	"nix",
	"radix_trie",
	"serde",
	"serde_json",
	"smallvec",
]
default = ["example"]
